<resources>
    <string name="app_name">Kalanjali 2015</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="name">Zeeshan Ahmed</string>
    <string name="email">zeetherocker@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_locate_us">Locate Us</string>
    <string name="title_activity_event">Event Activity</string>
    <string name="title_activity_event_list">Event List</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_main_event">Kalanjali-2015</string>
    <string name="main_event_desc">Susamskruti, the Cultural Forum of Sir MVIT, Bengaluru,has been celebrating\nKalanjali, an annual Intercollegiate Techno-Cultural extravaganza\nsuccessfully since the year 1996.\n\nKalanjali has been setting the stage for Student Community to showcase their talents, innovation and creativity with zeal and zest.\n\n\nKalanjali \'15 is scheduled to be held on 16th and 17th of October 2015\nThe Objectives of the Events are :\nTo enhance the inquisitive spirit and knowledge horizon.\nTo bring out the creative talents\nTo generate competitive skills\nTo nature communication skills and leadership qualities among students.</string>
    <string name="main_event_desc2">\t\t Sir M.Visvesvaraya Institute of Technology, Bengaluru has been conducting Kalanjali an annual inter-collegiate Techno-Cultural Fest successfully since the year 1996.\n\n\n\t\tKalanjali has been setting the stage for the student community to show their talent, innovation and creativity with zeal and zest. Kalanjali 2015 is scheduled to be held on 30th and 31st October 2015.</string>
    <string name="first_home1">Battle of Bands</string>
    <string name="first_home2">Indian Group Song</string>
    <string name="first_home3">Western Vocal (Solo)</string>
    <string name="first_home_desc1">VENUE : Old Auditorium \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.400\n2.\tDuration is 6+4 min\n3.\tOnly English songs allowed\n4.\tFour singers + Five accompanists are allowed\n5.\tParticipants need to bring their own instruments</string>
    <string name="first_home_desc2">VENUE : Old Auditorium \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.300\n2.\tDuration is 12+3 min\n3.\tMaximum of 6 singers are allowed in a group\n4.\tOnly 3 accompanists are allowed\n5.\tTeam has to present 3 songs; One Solo, One Duet and One group song\n6.\tSong should be either in Kannada or Hindi\n7.\tEvaluation is based on singing only not on makeup, costumes or actions of the team\n7.\tKaraoke not allowed</string>
    <string name="first_home_desc3">VENUE : CS Seminar Hall \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.Duration is 4+2 min\n3.\tEvaluation is based on Composition, Rhythm, Coordination and General Impression\n4.\tParticipants shall bring their own instruments\n5.\tOnly 2 accompanists are allowed\n6.\tLanguage of the song shall only be English\n7.\tKaraoke not allowed</string>
    <string name="first_home_time1">Day-1   9.00 AM</string>
    <string name="first_home_time2">Day-2   10.30 AM</string>
    <string name="first_home_time3">Day-2   9.30 AM</string>
    <string name="second_home1">Filmy Group Dance</string>
    <string name="second_home2">Solo Classical Dance</string>
    <string name="second_home3">Solo Filmy Dance</string>
    <string name="second_home_desc1">VENUE : New Auditorium \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.400\n2.\tDuration is 5+2 min\n3.\tGroup can consist of 6+6 members\n4.\tDance can be filmy, contemporary or western style\n5.\tRecorded music is allowed\n6.\tEvaluation will be based on rhythm, formation, expression, costume, makeup, sets and overall effects</string>
    <string name="second_home_desc2">VENUE : Dental Auditorium \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.50\n2.\tDuration is 8+4 min\n3.\tThe classical dance can be from any of the approved forms such as Kathak, Kathakkali, Bharathanatyam, Manipuri, Kuchipudi, Mohiniyattam, Odissi, etc.\n4.\tRecorded Music is allowed\n5.\tEvaluation will be based on technique, rhythm, abhinaya, costume, footwork and general impression\n6.\tHazardous elements like fire,smoke are to be avoided</string>
    <string name="second_home_desc3">VENUE : New Auditorium \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.\tDuration is 5+2 min\n3.\tOnly filmy dance is allowed in this item\n4.\tRecorded music is allowed\n5.\tEvaluation will be based on technique, rhythm, abhinaya, costume, footwork and general impression</string>
    <string name="second_home_time1">Day-2   2.00 PM</string>
    <string name="second_home_time2">Day-1   2.30 PM</string>
    <string name="second_home_time3">Day-1   12.00 PM</string>
    <string name="third_home1">Fashion Show</string>
    <string name="third_home2">Gully FootBall</string>
    <string name="third_home3">Street Play</string>
    <string name="third_home_desc1">VENUE : New Auditorium \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.1500\n2.\tOne Team per college\n3.\tMinimum number of participants per team is 10 and Maximum is 14. In addition there maybe one person in charge of music and one for lights\n4.\tStage time for each team is limited to maximum of 8\-12 min. 2 min for stage setting is permitted\n5.\tAny form of obscenity will result in debarring the team from further participation\n6.\tTheme: Theme of your Choice (Open theme)\n7.\t Prize:\n\t\t\t\t\t\t1st Prize: Rs.25,000\n\t\t\t\t\t\t2nd Prize: Rs.18,000</string>
    <string name="third_home_desc2">VENUE : Ground \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.1000 per team\n2.\tEach team will contain a maximum of 11 players\n3.\tGame Time: Approx. 15 min (7 min each half)\n4.\tA goalless match will result in a penalty shoot-out with 5-members taking one penalty each(One step penalty from the spot)\n5.\tOnly underarm throw allowed to goal keeper. If not followed 2 warnings will be given and the third will result in a penalty to the opposite team\n6.\tEvery out results in a kick in\n7.\tIf any player is given a red card, he will not be allowed to continue playing and team plays with a player short\n8.\tFailure to report on time results in a walkover to opposite team\n9.\tREFEREE\'S DECISION IS FINAL\n10.\t Prize:\n\t\t\t\t\t\t1st Prize: Rs.10,000\n\t\t\t\t\t\t2nd Prize: Rs.5,000</string>
    <string name="third_home_desc3">VENUE : New Block Side Entrance \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.300\n2.\tDuration is 10+2 min\n3.\tTeam can consist of 10+2 members\n4.\tPlay can be in English, Hindi or Kannada\n5.\tNo props allowed other than dupattas, head\wrist bands, kanjira\n6.\tNo pre-recorded music allowed\n7.\tGeneral rules of street play are applicable</string>
    <string name="third_home_time1">Day-2   3.30 PM</string>
    <string name="third_home_time2">Day-1   12.00 PM</string>
    <string name="third_home_time3">Day-1   2.30 PM</string>
    <string name="day1_event1">Filmy Dance (Solo) </string>
    <string name="day1_event2">Classical Vocal Solo</string>
    <string name="day1_event3">Face Painting</string>
    <string name="day1_event4">Technical Quiz</string>
    <string name="day1_event5">Western Vocal Solo</string>
    <string name="day1_event6">Photography</string>
    <string name="day1_event7">Essay Writing</string>
    <string name="day1_event8">Debate (Eng,Kan,Hindi)</string>
    <string name="day1_event9">Rangoli</string>
    <string name="day1_event10">Classical Dance (Solo)</string>
    <string name="day1_event11">Western Group Song</string>
    <string name="day1_event12">Just A Minute (JAM)</string>
    <string name="day1_event13">Street Play</string>
    <string name="day1_event14">Poetry Recitation (Eng,Kan,Hindi)</string>
    <string name="day1_event15">Collage</string>
    <string name="day1_event16">Pro Kabadi Girls</string>
    <string name="day1_event17">Coding and Debugging</string>
    <string name="day1_event18">Gully Football</string>
    <string name="day1_event19">Counter Strike 1.6</string>
    <string name="day1_event20">NFS Most Wanted</string>
    <string name="day1_event21">FIFA 14</string>
    <string name="day1_event22">DOTA</string>
    <string name="day1_event23">Art Exhibition</string>
    <string name="day1_desc1">VENUE : New Auditorium \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.\tDuration is 5+2 min\n3.\tOnly filmy dance is allowed in this item\n4.\tRecorded music is allowed\n5.\tEvaluation will be based on technique, rhythm, abhinaya, costume, footwork and general impression</string>
    <string name="day1_desc2">VENUE : Dental Auditorium \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.50\n2.\tDuration is 13+2 min\n3.\tItems can be hindustani or Carnatic\n4.\tFilm songs are not allowed\n5.\tEvaluation is based on the qualities like Shruthi,Raaga,Composition and General Impression\n6.\tOnly 2 accompanists are allowed\n7.\tElectronic Shruthi box or Tabla box are allowed</string>
    <string name="day1_desc3">VENUE : Faraday Seminar Hall (EEE 2nd Floor) \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.\tThe topic/subject/theme will be given on the spot\n3.\tParticipants are required to bring their own model and material\n4.\tTime limit is 60 min</string>
    <string name="day1_desc4">VENUE : MBA Seminar Hall (V Block) \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.\tMaximum of 4 members per team\n3.\tThere are 2 rounds\n4.\tFirst round is the elimination round which consists of MCQS.\nAreas: New technologies, tech terms, people in news etc.\n5.\tDuration: 40 min\n6.\tSecond round is quiz round (4 rounds in total)</string>
    <string name="day1_desc5">VENUE : CS Seminar Hall \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.Duration is 4+2 min\n3.\tEvaluation is based on Composition, Rhythm, Coordination and General Impression\n4.\tParticipants shall bring their own instruments\n5.\tOnly 2 accompanists are allowed\n6.\tLanguage of the song shall only be English\n7.\tKaraoke not allowed</string>
    <string name="day1_desc6">VENUE : New Block Side Entrance \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.\tMaximum 24 megapixel camera\n3.\tNo editing\n4.\tInstructions and theme will be given on spot</string>
    <string name="day1_desc7">VENUE : Marconi Seminar Hall (NB 2nd Floor) \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.\tDuration is 1 hour\n3.\tTopic will be given on spot\n4.\tLanguage can be English, Hindi or Kannada</string>
    <string name="day1_desc8">VENUE : Science Seminar Hall (Science Block) \n\n\nRULES:\n\n1.\tRegistration Fee: Rs.100\n2.\tDuration is 4+1 min\n3.\tParticipants can speak \'for\' or \'against\' the topic\n4.\tMedium of expression will be English, Kannada or Hindi\n5.\tPaper reading is not allowed\n6.\tTopic for the competition will be announced 24 hours prior to the start of the program</string>
    <string name="general_rules">GENERAL RULES</string>
    <string name="rules_gen">All participants should bring their valid ID cards.\n Only two entries per college are allowed for individual events.\nOnly one entry per college is allowed for group events.</string>
    <string name="prizes">PRIZES</string>
    <string name="prizes_list">Individual Events\nFirst Prize: Rs. 2,500\/\-\nSecond Prize: Rs. 2,000\/\-\nThird Prize: Rs. 1,000\/\-\n\nGroup Events\nFirst Prize: Rs. 5,000\/\-\nSecond Prize: Rs. 3,000\/\-\n\nStar of KALANJALI\nIndividual participants: Rs. 5,000\/\-\nOverall Championship trophy to the college</string>
    <string name="about_dev1">Official KALANJALI App for Android</string>
    <string name="about_dev2">Designed by\n\n Zeeshan Ahmed</string>
    <string name="about_dev3">9538752431</string>
    <string name="about_dev4">zeeshanap94@gmail.com</string>
</resources>