<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zap.Kalanjali.GeneralRules">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.zap.Kalanjali.GeneralRules">

            <include
                android:id="@+id/tool_bar"
                layout="@layout/tool_bar" />

            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tool_bar"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/id2"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:paddingTop="25dp"
                    android:text="@string/general_rules"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/id2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textid"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="55dp"
                    android:gravity="center_horizontal"
                    android:paddingTop="20dp"
                    android:text="@string/rules_gen"
                    android:textAlignment="center"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:elevation="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/id3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id2"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:paddingTop="25dp"
                    android:text="@string/prizes"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/id4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id3"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:paddingTop="20dp"
                    android:text="@string/prizes_list"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>